// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Travis publishing script should throw an error if the editor is missing 1`] = `"Registry editor is missing. Publishing failed."`;

exports[`Travis publishing script should throw an error if the token is missing 1`] = `"Registry token is missing. Publishing failed."`;

exports[`Travis publishing script should work correctly if Travis environment variable provided (no TRAVIS_TAG) 1`] = `
Object {
  "appBuildUrl": "https://github.com/mock-app/archive/f4a98378271c17e91faa9e70a2718c34c04cfc27.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.f4a98378271c17e91faa9e70a2718c34c04cfc27",
  "registryEditor": "cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://staging-apps-registry.cozycloud.cc",
  "sha256Sum": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
}
`;

exports[`Travis publishing script should work correctly with TRAVIS_TAG 1`] = `
Object {
  "appBuildUrl": "https://github.com/mock-app/archive/2.1.8.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8",
  "registryEditor": "cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://staging-apps-registry.cozycloud.cc",
  "sha256Sum": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
}
`;
